# tui-address-book

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
address_book/: __init__.py  __main__.py  app.py  db.py  logger.py  settings.py
address_book/css/: app.css
address_book/modals/: edit_address.py  help.py
app/: __main__.py  app.py  db.py  settings.py
app/css/: app.css
