[tool.poetry]
name = "vcard-test"
version = "0.1.0"
description = ""
authors = ["Timothy McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vcard_test"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
textual = "^0.23.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipdb = "^0.13.13"
ipython = "^8.13.1"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
textual = {extras = ["dev"], version = "^0.23.0"}
faker = "^18.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
