[tool.poetry]
name = "tui-address-book"
version = "0.1.0"
description = ""
authors = ["Timothy McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "address_book"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.2"
textual = "^0.23.0"
pendulum = "^2.1.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipdb = "^0.13.13"
ipython = "^8.13.1"
mypy = "^1.2.0"
pre-commit = "^3.3.1"
textual = {extras = ["dev"], version = "^0.23.0"}
faker = "^18.6.2"
ruff = "^0.0.264"
types-peewee = "^3.16.0.0"
types-python-dateutil = "^2.8.19.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

check_untyped_defs = true

follow_imports = "silent"
