[tool.poetry]
name = "tui-address-book"
version = "0.1.0"
description = ""
authors = ["Timothy McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "address_book"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.16.2"
textual = "^0.23.0"
pendulum = "^2.1.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.13.1"
mypy = "^1.2.0"
pre-commit = "^3.3.1"
textual = {extras = ["dev"], version = "^0.23.0"}
faker = "^18.6.2"
ruff = "^0.5.1"
types-peewee = "^3.16.0.0"
types-python-dateutil = "^2.8.19.12"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

check_untyped_defs = true

follow_imports = "silent"
